# TradeMaster

./: .gitignore  main.py  project-structure.txt  pyproject.toml  readme.md
bot/: client.py  commands.py  events.py
core/: llm.py  memory.py  router_new.py
data/: .gitignore  db.py
data/knowledge/: trading_terms.json
data/schema/: init.sql
data/visualization/: langgraph_architecture.md
tools/: __init__.py
tools/conversation/: __init__.py  assistant.py
tools/market/: __init__.py  analyzer.py  price.py  sentiment.py
tools/trading/: __init__.py  critic.py
tools/visualization/: dependency_graph.py  generate_graph.py
tools/wallet/: __init__.py  apis.py  tracker.py
utils/: config.py  logging.py  web_operator.py
